--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/master' }}
         run: echo "IMAGE_TAG=latest" >> $GITHUB_ENV
       - name: Define IMAGE_TAG (tags)
-        if: ${{ contains(github.ref, 'tags') && contains(github.ref, matrix.architecture) }}
+        if: ${{ contains(github.ref, 'tags') }}
         run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
       - name: Build and publish Docker Image to GitHub Packages Registry
         with:
