--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Check if deployment
-        if: ${{ github.ref == 'refs/heads/master' || (contains(github.ref, 'tags') }}
+        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'tags') }}
         run: echo "IS_DEPLOYMENT=true" >> $GITHUB_ENV
       - name: Deployment Status
         id: deployment
@@ -67,8 +67,6 @@ jobs:
         if: ${{ contains(github.ref, 'tags') }}
         run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
       - name: Build and publish Docker Image to GitHub Packages Registry
-        uses: VaultVulp/gp-docker-action@1.1.8
-        if: ${{ env.IS_DEPLOYMENT == 'true' }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           image-name: docker-emberjs-testing
