--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Check if deployment
-        if: ${{ github.ref == 'refs/heads/master' || (contains(github.ref, 'tags') }}
+        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'tags') }}
         run: echo "IS_DEPLOYMENT=true" >> $GITHUB_ENV
       - name: Deployment Status
         id: deployment
@@ -33,7 +33,6 @@ jobs:
       - name: Build & Test
         id: build-docker-image-using-cache
         uses: whoan/docker-build-with-cache-action@v5
-        timeout-minutes: 5
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
@@ -57,7 +56,6 @@ jobs:
         uses: aquasecurity/trivy-action@0.0.17
         with:
           image-ref: ${{ steps.build-docker-image-using-cache.outputs.FULL_IMAGE_NAME }}:${{ github.sha }}
-          exit-code: 1
           severity: CRITICAL
           format: table
       - name: Define IMAGE_TAG (master)
